--- a/static/style.css
+++ b/static/style.css
@@ -6,9 +6,24 @@ body{
   text-align:center;
 }
 
+a, a:visited{
+   color: #2843FF;
+   cursor: pointer;
+}
+
+a:hover{
+  color: #FE5F00;
+}
+
 h1{
   font-family: 'Roboto',sans-serif;
   font-size: 60px;
+  margin:0px;
+}
+
+h2{
+  font-family: 'Roboto',sans-serif;
+  font-size: 28px;
   margin:0px;
 }
 
@@ -16,6 +31,7 @@ p, form{
   font-family: 'Roboto', sans-serif;;
   font-size: 20px;
   color: #E0E0E0;
+  margin-top: 4px;
 }
 
 input{
@@ -46,19 +62,14 @@ input[type=submit] {
   margin-bottom:2%;
 }
 
-.description-text{
-  background-color: #232F3D;
+#footer{
   color: #E0E0E0;
-  border-radius: 10px;
-  padding:1.5% 5% 1.5% 5%;
-  display: inline-block;
-  text-align:center;
-  height:60%;
-  margin: 0 auto;
-  width: 65%;
+  background-color: #232F3D;
+  border-radius: 4px;
+  padding:3px;
+  text-align:right;
+  font-size:14px;
+  position:fixed;
+  bottom:-10px;
+  right:15px;
 }
-
-/*
-2B3169
-2A2A36
-*/
