--- a/templates/home.html
+++ b/templates/home.html
@@ -2,83 +2,9 @@
   <head>
     <title>NowPostedforMe</title>
     <style>@import url('https://fonts.googleapis.com/css?family=Roboto');</style>
-    <style>body{
-      background-color: #FCFCFC;
-    }
-
-    #container{
-      text-align:center;
-    }
-
-    a, a:visited{
-       color: #2843FF;
-       cursor: pointer;
-    }
-
-    a:hover{
-      color: #FE5F00;
-    }
-
-    h1{
-      font-family: 'Roboto',sans-serif;
-      font-size: 60px;
-      margin:0px;
-    }
-
-    h2{
-      font-family: 'Roboto',sans-serif;
-      font-size: 28px;
-      margin:0px;
-    }
-
-    p, form{
-      font-family: 'Roboto', sans-serif;;
-      font-size: 20px;
-      color: #E0E0E0;
-      margin-top: 4px;
-    }
-
-    input{
-      padding:3px;
-      margin:7px;
-    }
-
-    input[type=submit] {
-        padding:5px 15px;
-        background:#ccc;
-        border:0 none;
-        cursor:pointer;
-        -webkit-border-radius: 5px;
-        border-radius: 5px;
-
-    }
-
-    #masthead{
-      background-color: #232F3D;
-      color: #E0E0E0;
-      border-radius: 10px;
-      padding:1.5% 15% 1.5% 15%;
-      display: inline-block;
-      text-align:center;
-      margin: 0 auto;
-      width: 45%;
-      margin-top: 2%;
-      margin-bottom:2%;
-    }
-
-    #footer{
-      color: #E0E0E0;
-      background-color: #232F3D;
-      border-radius: 4px;
-      padding:3px;
-      text-align:right;
-      font-size:14px;
-      position:fixed;
-      bottom:-10px;
-      right:15px;
-    }
-
-    .description-text{
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <style>.description-text{
       background-color: #232F3D;
       color: #E0E0E0;
       border-radius: 10px;
