--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Thank you! You will receive a text message asking for confirmation.</title>
+    <title>Thank you! You will receive a text message and email asking for confirmation.</title>
     <style>@import url('https://fonts.googleapis.com/css?family=Roboto');</style>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
